Review Functionality implemented completely

--- a/view/GameDataView.form
+++ b/view/GameDataView.form
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="view.GameDataView">
-  <grid id="27dc6" binding="gameDataPanel" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="gameDataPanel" layout-manager="GridLayoutManager" row-count="4" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="524" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
       <component id="f4b4f" class="javax.swing.JLabel" binding="gameName">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="1" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="1" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <font name="Matura MT Script Capitals" size="72" style="1"/>
@@ -20,16 +20,20 @@
       </component>
       <scrollpane id="5ec9f" binding="scrollPane">
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="0" row-span="1" col-span="3" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <verticalScrollBarPolicy value="22"/>
         </properties>
         <border type="none"/>
         <children>
-          <component id="fb07a" class="javax.swing.JTable" binding="table1" default-binding="true">
+          <component id="fb07a" class="javax.swing.JTable" binding="reviewTable">
             <constraints/>
-            <properties/>
+            <properties>
+              <editingColumn value="-1"/>
+              <editingRow value="-1"/>
+              <enabled value="true"/>
+            </properties>
           </component>
         </children>
       </scrollpane>
@@ -43,15 +47,42 @@
       </component>
       <component id="ead5b" class="javax.swing.JTextPane" binding="infoTextPane">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="1" column="1" row-span="1" col-span="2" vsize-policy="2" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="50"/>
-            <maximum-size width="-1" height="600"/>
           </grid>
         </constraints>
         <properties>
           <editable value="false"/>
           <font name="Roboto Light" size="20" style="0"/>
           <text value=""/>
+        </properties>
+      </component>
+      <component id="433cd" class="javax.swing.JSlider" binding="ratingSlider">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <majorTickSpacing value="1"/>
+          <maximum value="10"/>
+          <minimum value="1"/>
+          <paintLabels value="true"/>
+          <paintTicks value="true"/>
+        </properties>
+      </component>
+      <component id="12ac9" class="javax.swing.JTextField" binding="ratingTextBox">
+        <constraints>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
+      </component>
+      <component id="e914e" class="javax.swing.JButton" binding="ratingSubmitButton">
+        <constraints>
+          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Add Review"/>
         </properties>
       </component>
     </children>
