--- a/view/GameListView.form
+++ b/view/GameListView.form
@@ -32,7 +32,7 @@
           </component>
         </children>
       </scrollpane>
-      <component id="de6f5" class="javax.swing.JTextField" binding="searchBox" custom-create="true">
+      <component id="de6f5" class="javax.swing.JTextField" binding="searchBox">
         <constraints>
           <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -56,7 +56,7 @@
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
-      <component id="999e4" class="javax.swing.JButton" binding="clearSearch" custom-create="true">
+      <component id="999e4" class="javax.swing.JButton" binding="clearSearch">
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
