--- a/view/LoginView.form
+++ b/view/LoginView.form
@@ -122,6 +122,7 @@
           <grid row="0" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <enabled value="false"/>
           <text value="Logout"/>
         </properties>
       </component>
