--- a/view/CollectionPageView.form
+++ b/view/CollectionPageView.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="collectionPagePanel" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="520" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -91,6 +91,14 @@
           </component>
         </children>
       </grid>
+      <component id="ac790" class="javax.swing.JButton" binding="removeSelectedGameButton" default-binding="true">
+        <constraints>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Remove Selected Game"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
