--- a/view/GameDataView.form
+++ b/view/GameDataView.form
@@ -13,7 +13,7 @@
           <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="1" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <font name="Matura MT Script Capitals" size="72" style="1"/>
+          <font size="72" style="1"/>
           <horizontalTextPosition value="0"/>
           <text value=""/>
         </properties>
@@ -116,7 +116,7 @@
         </constraints>
         <properties>
           <font name="Roboto Light" size="48" style="1"/>
-          <text value="Label"/>
+          <text value=""/>
           <verticalAlignment value="1"/>
         </properties>
       </component>
