--- a/view/GameDataView.form
+++ b/view/GameDataView.form
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="view.GameDataView">
-  <grid id="27dc6" binding="gameDataPanel" layout-manager="GridLayoutManager" row-count="4" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="gameDataPanel" layout-manager="GridLayoutManager" row-count="7" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="777" height="400"/>
+      <xy x="20" y="20" width="777" height="412"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
       <component id="f4b4f" class="javax.swing.JLabel" binding="gameName">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="1" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="1" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <font size="72" style="1"/>
@@ -18,28 +18,9 @@
           <text value=""/>
         </properties>
       </component>
-      <scrollpane id="5ec9f" binding="scrollPane">
-        <constraints>
-          <grid row="3" column="0" row-span="1" col-span="4" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <verticalScrollBarPolicy value="22"/>
-        </properties>
-        <border type="none"/>
-        <children>
-          <component id="fb07a" class="javax.swing.JTable" binding="reviewTable">
-            <constraints/>
-            <properties>
-              <editingColumn value="-1"/>
-              <editingRow value="-1"/>
-              <enabled value="true"/>
-            </properties>
-          </component>
-        </children>
-      </scrollpane>
       <component id="b404" class="javax.swing.JLabel" binding="imageLabel">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value=""/>
@@ -47,7 +28,7 @@
       </component>
       <component id="ead5b" class="javax.swing.JTextPane" binding="infoTextPane">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="2" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="2" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="50"/>
           </grid>
         </constraints>
@@ -57,38 +38,10 @@
           <text value=""/>
         </properties>
       </component>
-      <component id="433cd" class="javax.swing.JSlider" binding="ratingSlider">
-        <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <majorTickSpacing value="1"/>
-          <maximum value="10"/>
-          <minimum value="1"/>
-          <paintLabels value="true"/>
-          <paintTicks value="true"/>
-        </properties>
-      </component>
-      <component id="12ac9" class="javax.swing.JTextField" binding="ratingTextBox">
-        <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
-      <component id="e914e" class="javax.swing.JButton" binding="ratingSubmitButton">
-        <constraints>
-          <grid row="2" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Add Review"/>
-        </properties>
-      </component>
       <grid id="a4651" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="1" column="2" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="2" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="3" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="2" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
@@ -99,7 +52,7 @@
             </constraints>
             <properties>
               <font name="Roboto Light" size="26" style="0"/>
-              <text value="&lt;html&gt;&lt;center&gt;Add Game&lt;br&gt;To A Collection&lt;/center&gt;&lt;/html&gt;"/>
+              <text value="Add to Collection"/>
             </properties>
           </component>
           <component id="2437b" class="javax.swing.JComboBox" binding="collectionList">
@@ -112,12 +65,79 @@
       </grid>
       <component id="77ddc" class="javax.swing.JLabel" binding="ratingValue">
         <constraints>
-          <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <font name="Roboto Light" size="48" style="1"/>
           <text value=""/>
           <verticalAlignment value="1"/>
+        </properties>
+      </component>
+      <component id="433cd" class="javax.swing.JSlider" binding="ratingSlider">
+        <constraints>
+          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <majorTickSpacing value="1"/>
+          <maximum value="10"/>
+          <minimum value="1"/>
+          <paintLabels value="true"/>
+          <paintTicks value="true"/>
+        </properties>
+      </component>
+      <vspacer id="e6443">
+        <constraints>
+          <grid row="2" column="1" row-span="1" col-span="3" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+            <preferred-size width="-1" height="100"/>
+          </grid>
+        </constraints>
+      </vspacer>
+      <scrollpane id="5ec9f" binding="scrollPane">
+        <constraints>
+          <grid row="3" column="2" row-span="4" col-span="3" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <verticalScrollBarPolicy value="22"/>
+        </properties>
+        <border type="none"/>
+        <children>
+          <component id="fb07a" class="javax.swing.JTable" binding="reviewTable">
+            <constraints/>
+            <properties>
+              <autoCreateRowSorter value="true"/>
+              <editingColumn value="-1"/>
+              <editingRow value="-1"/>
+              <enabled value="true"/>
+            </properties>
+          </component>
+        </children>
+      </scrollpane>
+      <hspacer id="6283a">
+        <constraints>
+          <grid row="0" column="5" row-span="7" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </hspacer>
+      <hspacer id="caaf3">
+        <constraints>
+          <grid row="0" column="0" row-span="7" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </hspacer>
+      <component id="4dbda" class="javax.swing.JTextArea" binding="ratingTextBox">
+        <constraints>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value=""/>
+        </properties>
+      </component>
+      <component id="e914e" class="javax.swing.JButton" binding="ratingSubmitButton">
+        <constraints>
+          <grid row="5" column="1" row-span="2" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Add Review"/>
         </properties>
       </component>
     </children>
