--- a/view/GameDataView.form
+++ b/view/GameDataView.form
@@ -196,7 +196,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="2437b" class="javax.swing.JComboBox" binding="collectionList">
+          <component id="2437b" class="javax.swing.JComboBox" binding="collectionMenu">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
